# ChangeLog for media-gfx/graphite2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/graphite2/ChangeLog,v 1.25 2012/04/06 10:32:18 scarabeus Exp $

  06 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> graphite2-1.1.1.ebuild:
  Stabilise 1.1.1 on amd64 and x86.

*graphite2-1.1.1 (01 Mar 2012)

  01 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org> +graphite2-1.1.1.ebuild,
  -files/graphite2-1.1.0-fix-perl-includes.patch, -graphite2-1.1.0.ebuild:
  Version bump to latest.

  17 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> graphite2-1.1.0.ebuild:
  Fix errornous mv from testing.

  17 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> graphite2-1.1.0.ebuild,
  +files/graphite2-1.1.0-fix-perl-includes.patch:
  Add one more patch and bit more fun for perl.

  16 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  files/graphite2-1.1.0-includes-libs-perl.patch:
  Fix copy pasto in perl patch. Wrt bug#403997.

*graphite2-1.1.0 (15 Feb 2012)

  15 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> +graphite2-1.1.0.ebuild,
  files/graphite2-fix_wrong_linker_opts.patch,
  +files/graphite2-1.1.0-includes-libs-perl.patch:
  Version bump to latest.

  18 Dec 2011; Mark Loeser <halcy0n@gentoo.org> graphite2-1.0.3-r1.ebuild:
  Stable for ppc; bug #387187

  11 Dec 2011; Markus Meier <maekke@gentoo.org> graphite2-1.0.3-r1.ebuild:
  x86 stable, bug #387187

*graphite2-1.0.3-r1 (28 Oct 2011)

  28 Oct 2011; Tomáš Chvátal <scarabeus@gentoo.org> -graphite2-1.0.3.ebuild,
  +graphite2-1.0.3-r1.ebuild, +files/graphite2-1.0.3-no-test-binaries.patch:
  Do not install test binary, revbump to ensure it is not installed, keep the
  keywords. Wrt bug #388733.

  26 Oct 2011; Tony Vroon <chainsaw@gentoo.org> graphite2-1.0.3.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
  Agostino "ago" Sarubbo in bug #387187.

*graphite2-1.0.3 (22 Sep 2011)
