@@ -8,24 +8,26 @@ AUX graphite2-fix_wrong_linker_opts.patch 760 RMD160 d471cdcf96a027c37409a5430a8
 AUX graphite2-includes-libs-perl.patch 555 RMD160 72348bd7979b506ecf03a677815f3f3830b9b4a1 SHA1 90dbc4e187e07625481fd80a79b8a6d557dcc21a SHA256 a4d462eab477ba5d07540f56363a19bafdd13e46378a5363bfa094aae625f8a4
 DIST graphite2-1.0.3.tgz 4352127 RMD160 73d2e2bf2f6b0039b9d9ef05b204c1027b284e44 SHA1 2d3325198436e2e89cf0b30deefde78d34db9ddd SHA256 643c5307a3fdc31754a18c8c1398d4036a107e4bdc03d9a265fcadfc85d4a07a
 DIST graphite2-1.1.1.tgz 4468216 RMD160 c500f833d4620b3ddf875e0817e6e1a5f8c5ed91 SHA1 bebf2e5837ffa838c01ed165a0c3984eb114e7c1 SHA256 7140a1eb22e41138e01e76ae4088bb07e3293ca981cafedfeebc8439ed7d3149
+DIST graphite2-1.1.2.tgz 3677920 RMD160 389819c589a448d68626356566768dee39a451fe SHA1 afc07f4afd9aa4a2f8ac37bb7178635fd20dc9a7 SHA256 3e96d503bd8014b5ea06741487f5db2aab2d5785d43aa046c7d6de74e1b24f87
 EBUILD graphite2-1.0.3-r1.ebuild 1806 RMD160 cffd88c455a301e58c568a4c72f040618a8e422b SHA1 92ca6b109e892884bee323e11c5d17d011cab91a SHA256 920ff20ddcde021a2f537ffb95eae729361a0f40c6d3c87232694b7beac7abed
 EBUILD graphite2-1.1.1.ebuild 1812 RMD160 0738fb2bff70bf2eacec3041600b20bcbb935400 SHA1 5dc0885c3413a28c13251cd9a955fe59d57449cb SHA256 add995fa6cc3ba87344854d9e57d4bef2d6657b0815d781802dd1493ea3aac24
-MISC ChangeLog 4827 RMD160 541e8bb492109e123195170f353f0b8113d4df76 SHA1 08c648fc0d6928e73d99e654248279564a78cd99 SHA256 921c46e654b5049b5bebaedd9bd60b25cc016bd4412715ae515e90f91cf5f8aa
+EBUILD graphite2-1.1.2.ebuild 1814 RMD160 fc2d3e330c024342547894adadea097310c8a67a SHA1 501293b5442a50e954aed4aa4d3059ee0992ca1a SHA256 eac5e5f8c5727d2e1184d7a70ef37dc082fee3df03d64ca09864fb4f5b709d9f
+MISC ChangeLog 4966 RMD160 cabc1ccf1257c8be16c32863619e8143c9b20c64 SHA1 01afeb03b11de54927b0de76fb2fc9ed6be2cee0 SHA256 bc37f03a17d664b31eb965220d5036ffe5a9be8c8ce807ce79eefd8c28a10d9a
 MISC metadata.xml 163 RMD160 68888b3756b2cf14b88ff5aa31e4fd07c9cc9713 SHA1 bd3e6fae69f40f453bc382ae8f1a7644a590a9cc SHA256 4539da09a369d01dcec488c471eeaaef71b60686482101eba357344538e994e2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPfsY9AAoJEOSiRoyO7jvofN0P/0IKnpuwe2kYzbkDNZCsYIPb
-EGqtyGDDZ6B9ikYruhdgjALLpa9lizBs0LGGOg53WoLCG92cvfTHrkxyBQZRH/Ye
-DawG+jbGo50Re5VVVkaP16OAd5Bo8a1OtkoynTOqKYCQdLiRP2c96fJPS0cZBoms
-A69TAZUZzGVJI9ykITMw8EEJUQzlYPxlyVx4SjDcijIFY5sTg9+npI5FQ1FHk8Ra
-s9O82Mas2prd3O3YqNh+5CWIn+FOeJ+cGYHprY6Szgcydlb7FZ70T8vaYfkNmfcc
-b8NC9KkNEyfoRNBwggd802osMTmHl4wwQRDjdwjmqjwmDDrcL2zgsXo2XnJ5ykng
-Mh78vNylG/ifq6jYl5TvtxBrHFfmEm2WT5ZWnsj15CpGPHy6+z9mi164oJogQvKr
-rJhqEOxxnOGgmRpskrgdJBtgRMkzlm2j7M04qEeeARPUcAged2PFCdQJZVB2NC+p
-MWbOL9umHyCvrfFbBwXX7RE8J0fZI3l6s9rJ5CZXFOiJqDio+xDrLWpcfPyWg4Al
-qdSZVJenspTM24hUwd2EkFiZZLNsNweEugtKS8e1Aqkga689w62F7mvOtqsA3IcX
-03y+fMsKmoyp9aNccDbqTpfN6699iQhcE+CdgHlziZIBb11iiA+o7vSmVyLRijVh
-s79KYCGDa8xLESdVZ1RY
-=EcZh
+iQIcBAEBAgAGBQJPlTTNAAoJEOSiRoyO7jvoLV4P/jWF5fWfgqIuxcA0xVx0kg72
+ZeelaEO5T1Ub529+ZkpK5uU/5Y18+JkfbIe8A97qzokexHm04xGZh/HjXIZaoNqA
+Yn3qRM9FwcB32nd4DG+0GCcdZ5N7aPA7+iSPYaQXa+yuTy6xMQchpcFl6AmJ0iD2
+hddQyGUKu/Q58CCiinhsgJZBtm6bdBPGeDIZItbr6Fa6CGRtKyKXxBU+wdTtKOhb
+8ZHqByhajbhzJN4F0HYwxCFt78OQkm5TGxkjToqzM7wcae39K06f4FWGfSQDO9LF
+RXJfobCRr1Mz30Tm2pgyFN9PGpLonZKa5UNlxLfr7EUB14jagikE9zMclGC2xelW
+HOw7dFrjuj4LSHaX5xMKxXTQqZrp811xkSO8D5pjDxFUjb6ELX7O6MEMET+ad0R7
+xs2iypMPNuOMrgS10eZEs3rdHbz0biX0wDtLTgf8sbr90AoYpEpfFZ4AqHOzdOxe
+xip8B609lei3kWh/zIdVpbTNHHe0nudQkh3x2MpDShzTwZhOMmKTdXUhsctgZytu
+O641SV649FYAtSuXUqNr0kAqf8IXKWgYJVCKmSpClf6IrZ3LMMmZwCO9vkxj/it0
+sCDLnG7s9QYMPUdy31094LjhoDiPAVfCMVDg8EQnzf4eXAiz6ikqDu8dJfroY5nA
+sQtce4ksjxjeGnijmk1E
+=Hlh8
 -----END PGP SIGNATURE-----
