@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/graphite2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/graphite2/ChangeLog,v 1.25 2012/04/06 10:32:18 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/graphite2/ChangeLog,v 1.26 2012/04/23 10:53:44 scarabeus Exp $
+
+*graphite2-1.1.2 (23 Apr 2012)
+
+  23 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> +graphite2-1.1.2.ebuild:
+  Version bump to latest.
 
   06 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> graphite2-1.1.1.ebuild:
   Stabilise 1.1.1 on amd64 and x86.
